--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@next/font": "^13.1.6",
+    "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "^1.0.3",
-    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.7.1",
@@ -19,17 +20,21 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
+    "encoding": "^0.1.13",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.7.0",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lucide-react": "^0.172.0",
+    "next": "^13.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-leaflet": "^4.2.0",
+    "tailwind-merge": "^1.12.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
